<resources>
    <string name="app_name">Shaker</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="login">Login</string>
    <string name="title_activity_maintry">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_board_user">MainBoardUser</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>


    <!--/*the new stuff for the addeven*/-->




    <string name="title_activity_main">DateTimePicker Example</string>
    <string name="selected_time">The time you picked will be shown here.</string>
    <string name="selected_date">The date you picked will be shown here.</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="mode_24_hours">Use 24 hour mode</string>
    <string name="mode_dark_time">Use dark theme</string>
    <string name="mode_dark_date">Use dark theme</string>
    <string name="mode_custom_accent">Use custom accent</string>
    <string name="vibrate_time">Vibrate on touch</string>
    <string name="vibrate_date">Vibrate on touch</string>
    <string name="dismiss_time">Dismiss on pause (eg: orientation change)</string>
    <string name="dismiss_date">Dismiss on pause (eg: orientation change)</string>
    <string name="title_time">Show a title</string>
    <string name="title_date">Show a title</string>
    <string name="show_year_first">Show the year picker first</string>
    <string name="enable_seconds">Show seconds picker</string>
    <string name="enable_minutes">Show minutes picker</string>
    <string name="limit_times">Limit selectable times</string>
    <string name="limit_dates">Limit selectable dates</string>
    <string name="disable_dates">Disable specific dates</string>
    <string name="highlight_dates">Highlight certain dates</string>
    <string name="hello_world">Hello</string>

    <!--<string name="action_settings">Settings</string>-->

</resources>
